tests/ui/pattern/usefulness/match-vec-unreachable.stderr
error: unreachable pattern
  --> $DIR/match-vec-unreachable.rs:8:9
   |
LL |         [(1, 2), (2, 3), b] => (),
   |         ^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/match-vec-unreachable.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/match-vec-unreachable.rs:18:9
   |
LL |         [_, _, _, _, _] => { }
   |         ^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/match-vec-unreachable.rs:26:9
   |
LL |         ['a', 'b', 'c'] => {}
   |         ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

